# coinflip-rust

./: .env  .gitignore  Cargo.toml  README.md  plan.txt
src/: lib.rs  main.rs
src/auth/: jwt.rs  mod.rs
src/models/: mod.rs  user.rs
