[package]
name = "coinflip-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Bitcoin-based coinflip gambling game"

[dependencies]
actix-web = "4.4"
# Web framework for building HTTP services

actix-rt = "2.9"
# Runtime system for Actix applications

serde = { version = "1.0", features = ["derive"] }
# Serialization/deserialization framework with derive macros

serde_json = "1.0"
# JSON support for Serde

tokio = { version = "1.36", features = ["full"] }
# Async runtime and utilities

env_logger = "0.11"
# Logging implementation that reads from environment variables

log = "0.4"
# Logging facade that provides macros for logging

dotenv = "0.15"
# Loads environment variables from .env files

jsonwebtoken = "9.2"
# JWT (JSON Web Token) authentication implementation

bcrypt = "0.15"
# Password hashing and verification

uuid = { version = "1.7", features = ["v4", "serde"] }
# UUID generation and serialization support

chrono = { version = "0.4", features = ["serde"] }
# Date and time utilities with Serde support

validator = { version = "0.16", features = ["derive"] }
# Input validation with derive macros
